src/assets/css/pages/home.css
.section-about {
  background-color: $color-grey-light;
  padding: calc($accnat-about-tr-y-cf + 4rem) 0;
  margin-top: calc(-1 * ($accnat-about-tr-y-cf));
}

.section-features {
  background-color: $color-grey-light;
  padding: calc($accnat-about-tr-y-cf + 4rem) 0;
  margin-top: calc(-1 * ($accnat-about-tr-y-cf));
  background-image: linear-gradient(
      to right bottom,
      $color-theme-light,
      $color-theme
    ),
    url("~@img/nat-4.jpg");

  transform: skewY(-7deg);

  @apply .mu-bg-cover-to-top;

  /* @media (--tablet-port) {
  *   padding: 10rem 0;
  * }
  */

  & > * {
    transform: skewY(7deg);
  }
}

.section-tours {
  background-color: $color-grey-light;
  padding-top: calc($accnat-about-tr-y-cf + 6rem);
  margin-top: calc(-1 * ($accnat-about-tr-y-cf));
  padding-bottom: 10rem;
}

.section-stories {
  background-color: $color-grey-light;
  padding: 10rem 0;

  @apply tw-relative;
}

.section-book {
  padding: 10rem 0;
  background-image: linear-gradient(
    to right bottom,
    $color-theme-light,
    $color-theme
  );
}

@block book {
  height: 35rem;

  background-image: linear-gradient(
      105deg,
      color-mod($color-white a(90%)) 0%,
      color-mod($color-white a(90%)) 50%,
      transparent 50%
    ),
    url(~@img/nat-10.jpg);

  @apply .mu-bg-cover-to-top tw-rounded tw-shadow-md;

  @media (--tablet-land) {
    background-image: linear-gradient(
        105deg,
        color-mod($color-white a(90%)) 0%,
        color-mod($color-white a(90%)) 70%,
        transparent 50%
      ),
      url(~@img/nat-10.jpg);
  }

  @element form {
    width: 50%;
    height: inherit;

    @apply tw-p-12;

    @media (--tablet-land) {
      width: 65%;
    }

    @media (--phone) {
      width: 75%;
    }
  }
}

